@@ -1076,3 +1076,6 @@
 		Recommended usage for Quartz is jhbuild with
 		gtk-mac-integration.
 		Added mac bundle info in contrib/bundle_for_osx.
+		Added gtkwave_argv0_cached as Open New Window does
+		not work if "gtkwave" is not in path or is something
+		like gtkwave-bin as in an OSX bundle.
